GNOME Bugzilla – Bug 676372
gupnp_didl_lite_container_get_create_classes returns invalid data
Last modified: 2019-02-22 05:57:50 UTC
The list returned by this function call contains NULL pointer since it tries to get the content of the createClass node, but it should get the content of the text child node instead.