Fix get_{create|search}_classes

We need to return the content of the first child (a TEXT node) and not
the content of the node itself.

Fixes:
    https://bugzilla.gnome.org/show_bug.cgi?id=676372